# football-data-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: scheduled_tasks.json
.github/workflows/: quality.yml
docs/superpowers/plans/: 2026-05-25-dashboard-frontend.md  2026-05-25-shadow-prediction-loop.md
football_data_mcp/: __init__.py  api_contracts.py  api_http.py  auto_tuner.py  backtest.py  config.py  dashboard_contract.py  dashboard_service.py  data_sources_registry.py  db_janitor.py  empirical_allowlist.py  ensemble.py  event_xg.py  external_sources.py  feature_engine.py  league_strategy.py  learning_store.py  model_engine.py  pick_filters.py  profitability_calculator.py  rating.py  residual_model_store.py  server.py  snapshot_store.py  sources.py  validation_store.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  server.py  tailwind.config.js  test_server.py  vite.config.ts
frontend/src/: App.tsx  appRouting.test.ts  appRouting.ts  dashboardModel.test.ts  dashboardModel.ts  errorReporter.test.ts  errorReporter.ts  formatTime.test.ts  formatTime.ts  index.css  main.tsx  styles.css  types.ts  useDarkMode.test.tsx  useDarkMode.ts
frontend/src/api/: dashboardClient.test.ts  dashboardClient.ts  poller.test.ts  poller.ts
frontend/src/components/charts/: HeatMap.tsx  LineMovementChart.tsx  ReliabilityDiagram.tsx  ScoreMatrix.tsx
frontend/src/components/dashboard/: KpiCards.tsx  LedgerTable.test.tsx  LedgerTable.tsx  PickCard.tsx  ProfitabilityHeroBar.tsx  ProfitabilityPanel.tsx  SettlementFeed.tsx
frontend/src/components/detail/: OddsChart.tsx
frontend/src/components/layout/: Sidebar.tsx  TopBar.tsx
frontend/src/components/shared/: Badge.tsx  (+9 more)
frontend/src/pages/: MatchDetailPage.tsx
scripts/: baseline_comparison.py  check.sh  leisu_browser_proxy.py  sporttery_proxy.py
tests/: test_adaptive_window.py  test_backtest.py  test_dashboard_contract.py  test_dashboard_snapshot_contract.py  test_data_source_upgrade.py  test_db_janitor.py  test_fdo_adapter.py  test_league_allowlist.py  test_learning_cycle.py  test_learning_store.py  test_model_engine.py  test_p0_backend_fixes.py  test_rating.py  test_server_dashboard.py  test_sources.py
(+5 files in other folders)
