[project]
name = "football-data-mcp"
version = "0.1.0"
description = "MCP server for single-match football schedule, odds, and form aggregation."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.9.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
football-data-mcp = "football_data_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
